# Password-Generator

./: .gitattributes  .gitignore  README.md  generadordecontrasenas.py  passwordgenerator.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
passwordgenerator/: __init__.py  __main__.py  cli.py  config.py  generator.py  passphrase_generator.py  storage.py  strength_checker.py
passwordgenerator/clit/: __init__.py  main.py
passwordgenerator/core/: generator.py  passphrase_generator.py
passwordgenerator/gui/: __init__.py  main_window.py
passwordgenerator/manager/: __init__.py  models.py  password_manager.py
passwordgenerator/models/: password.py
passwordgenerator/security/: __init__.py  crypto.py  strength.py
passwordgenerator/storage/: manager.py
test/: test_password_manager.py
