[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203

[pycodestyle]
max-line-length = 88

[isort]
line_length = 88
include_trailing_comma = True
multi_line_output = 3

[pyright]
pythonVersion = "3.8"
pythonPlatform = "Windows"
typeCheckingMode = "basic"
